fix save buttons not to hide behind course-details-nav-tabs
closes #545

--- a/client/views/courses/details/_course.details.scss
+++ b/client/views/courses/details/_course.details.scss
@@ -114,6 +114,7 @@
 
 .course-details-title > .editable-controls {
 	font-size: medium;
+	z-index: 100;
 }
 
 .course-details-title > h2 {
